nav always visible, begin button no longer obscures text

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -210,10 +210,10 @@ body {
 #splash {
   position: fixed;
   background-color: $bg-color;
-  top: 0;
+  top: 50px;
   width: 100%;
   height: 100%;
-  z-index: 9999;
+  z-index: 999;
   color: #fff;
 }
 
@@ -246,7 +246,6 @@ body {
 }
 
 #begin-button {
-  position: absolute;
   font-family: $body-text;
   font-size: 5em;
   margin-top: 10px;
@@ -271,6 +270,8 @@ body {
 /******************** 
 Begin navbar
 ********************/
+#nav {
+}
 #nav-logo {
   display: inline-block;
   img {
